force-app/main/default/objects/School_Object__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>This shows the most recent subscription cancellation date of the customer</description>
    <inlineHelpText>This shows the most recent subscription cancellation date of the customer</inlineHelpText>
    <label>Cancelation Date</label>
    <type>Date</type>
</CustomField>