force-app/main/default/objects/School_Object__c/fields/Cancellation_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Type__c</fullName>
    <label>Cancelation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Lost Sale</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Non-Target</fullName>
            </value>
            <value>
                <fullName>Trial Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>