force-app/main/default/objects/School_Object__c/fields/Charges_Created__c.field-meta.xml
<CustomField>
    <fullName>Charges_Created__c</fullName>
    <label>Charges Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>