force-app/main/default/objects/School_Object__c/fields/Check_in_out_Actions_in_Last_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Check_in_out_Actions_in_Last_7_Days__c</fullName>
    <label>Check-in/out Actions in Last 7 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>