force-app/main/default/objects/School_Object__c/fields/Checkin_Count__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Count__c</fullName>
    <label>Checkin Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>