force-app/main/default/objects/School_Object__c/fields/Clicked_Billing_Tab_from_Nav_Tab_Date__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Billing_Tab_from_Nav_Tab_Date__c</fullName>
    <description>Populated by DataEng. Temporary field until DataEng has bandwidth to standup Mixpanel integration with Intercom and Hubspot. Last Date clicked on Billing tab from the navigation tab</description>
    <inlineHelpText>Last Date clicked on Billing tab from the navigation tab</inlineHelpText>
    <label>Clicked Billing Tab from Nav Tab Date</label>
    <type>Date</type>
</CustomField>