force-app/main/default/objects/School_Object__c/fields/Clicked_Create_Packet_Creation_Flow_Date__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Create_Packet_Creation_Flow_Date__c</fullName>
    <description>Populated by DataEng. Temporary field until DataEng has bandwidth to standup Mixpanel integration with Intercom and Hubspot. Last date clicked Create within the packet creation flow</description>
    <inlineHelpText>Last date clicked Create within the packet creation flow</inlineHelpText>
    <label>Clicked Create Packet Creation Flow Date</label>
    <type>Date</type>
</CustomField>