force-app/main/default/objects/School_Object__c/fields/Clicked_Tuition_Agreement_Banner_Date__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Tuition_Agreement_Banner_Date__c</fullName>
    <description>Populated by DataEng. Temporary field until DataEng has bandwidth to standup Mixpanel integration with Intercom and Hubspot.  Last date clicked learn more &amp; enable - Tuition Agreement banner - billing</description>
    <inlineHelpText>Last date clicked learn more &amp; enable - Tuition Agreement banner - billing</inlineHelpText>
    <label>Clicked Tuition Agreement Banner Date</label>
    <type>Date</type>
</CustomField>