force-app/main/default/objects/School_Object__c/fields/Clicks_Billing_from_Nav_Tab_Events__c.field-meta.xml
<CustomField>
    <fullName>Clicks_Billing_from_Nav_Tab_Events__c</fullName>
    <description>Populated by DataEng. Temporary field until DataEng has bandwidth to standup Mixpanel integration with Intercom and Hubspot. # of events of Clicks on Billing tab from the navigation tab</description>
    <inlineHelpText># of events of Clicks on Billing tab from the navigation tab</inlineHelpText>
    <label>Clicks Billing from Nav Tab Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>