force-app/main/default/objects/School_Object__c/fields/Company_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Created_Date__c</fullName>
    <label>Company Created Date</label>
    <type>Date</type>
</CustomField>