force-app/main/default/objects/School_Object__c/fields/Complete_Setup_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Complete_Setup_Threshold_Met__c</fullName>
    <label>Complete Setup Threshold Met</label>
    <type>DateTime</type>
</CustomField>