force-app/main/default/objects/School_Object__c/fields/Created_a_Lesson_Plan_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_a_Lesson_Plan_Date__c</fullName>
    <description>Populated by DataEng. Temporary field until DataEng has bandwidth to standup Mixpanel integration with Intercom and Hubspot. Last date created a Lesson Plan</description>
    <inlineHelpText>Last date created a Lesson Plan</inlineHelpText>
    <label>Created a Lesson Plan Date</label>
    <type>Date</type>
</CustomField>