force-app/main/default/objects/School_Object__c/fields/Created_a_Lesson_Plan_Events__c.field-meta.xml
<CustomField>
    <fullName>Created_a_Lesson_Plan_Events__c</fullName>
    <description>Populated by DataEng. Temporary field until DataEng has bandwidth to standup Mixpanel integration with Intercom and Hubspot. # of events of Created a Lesson Plan</description>
    <inlineHelpText># of events of Created a Lesson Plan</inlineHelpText>
    <label>Created a Lesson Plan Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>