force-app/main/default/objects/School_Object__c/fields/Created_at__c.field-meta.xml
<CustomField>
    <fullName>Created_at__c</fullName>
    <description>Conversion of system created date to date/time</description>
    <formula>DATETIMEVALUE(CreatedDate)</formula>
    <label>Created at</label>
    <type>DateTime</type>
</CustomField>