force-app/main/default/objects/School_Object__c/fields/Current_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Current_Coupon__c</fullName>
    <description>Brightwheel coupon code</description>
    <inlineHelpText>Brightwheel coupon code</inlineHelpText>
    <label>Current Coupon</label>
    <length>60</length>
    <type>Text</type>
</CustomField>