force-app/main/default/objects/School_Object__c/fields/Current_Coupon_Applied_By__c.field-meta.xml
<CustomField>
    <fullName>Current_Coupon_Applied_By__c</fullName>
    <description>This shows who applied the current coupon to the customer</description>
    <inlineHelpText>This shows who applied the current coupon to the customer</inlineHelpText>
    <label>Current Coupon Applied By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>