force-app/main/default/objects/School_Object__c/fields/Current_Coupon_Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Coupon_Applied_Date__c</fullName>
    <description>The most recent coupon that the sales rep applied in Junglegym.</description>
    <inlineHelpText>The most recent coupon that the sales rep applied in Junglegym.</inlineHelpText>
    <label>Current Coupon Applied Date</label>
    <type>DateTime</type>
</CustomField>