force-app/main/default/objects/School_Object__c/fields/Current_Coupon_Duration__c.field-meta.xml
<CustomField>
    <fullName>Current_Coupon_Duration__c</fullName>
    <description>The length of the coupon duration</description>
    <inlineHelpText>The length of the coupon duration</inlineHelpText>
    <label>Current Coupon Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>