force-app/main/default/objects/School_Object__c/fields/Current_Coupon_Percent_Off__c.field-meta.xml
<CustomField>
    <fullName>Current_Coupon_Percent_Off__c</fullName>
    <description>Coupon percent off</description>
    <inlineHelpText>Coupon percent off</inlineHelpText>
    <label>Current Coupon Percent Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>