force-app/main/default/objects/School_Object__c/fields/Current_Coupon_Start__c.field-meta.xml
<CustomField>
    <fullName>Current_Coupon_Start__c</fullName>
    <description>Current coupon start date</description>
    <inlineHelpText>Current coupon start date</inlineHelpText>
    <label>Current Coupon Start</label>
    <type>DateTime</type>
</CustomField>