force-app/main/default/objects/School_Object__c/fields/Current_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Current_Enrollment__c</fullName>
    <label>Current Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>