force-app/main/default/objects/School_Object__c/fields/Current_Enrollment_Active_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Current_Enrollment_Active_Percentage__c</fullName>
    <inlineHelpText>The percent of enrolled students marked as active on a given day</inlineHelpText>
    <label>Current Enrollment Active Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>