force-app/main/default/objects/School_Object__c/fields/Current_Org_Subscription_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Org_Subscription_Amount__c</fullName>
    <description>The total subscription amount for the organization the school belongs to</description>
    <inlineHelpText>The total subscription amount for the organization the school belongs to</inlineHelpText>
    <label>Current Org Subscription Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>