force-app/main/default/objects/School_Object__c/fields/Current_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Verification_Status__c</fullName>
    <description>Billing funnel - Indicate schools current verification status as of today</description>
    <label>Current Verification Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>