force-app/main/default/objects/School_Object__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>Customer Segment as defined by product</description>
    <label>Customer Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>