force-app/main/default/objects/School_Object__c/fields/Date_of_Activation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Activation__c</fullName>
    <label>Date of Activation</label>
    <type>Date</type>
</CustomField>