force-app/main/default/objects/School_Object__c/fields/Day_in_Onboarding_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Day_in_Onboarding_Funnel_Stage__c</fullName>
    <description>Days in onboarding funnel stage</description>
    <label>Day in Onboarding Funnel Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>