force-app/main/default/objects/School_Object__c/fields/Days_in_Billing_Activation_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Billing_Activation_Funnel_Stage__c</fullName>
    <description>Number of days the school has been in their current Billing Activation Funnel Stage.</description>
    <inlineHelpText>Number of days the school has been in their current Billing Activation Funnel Stage.</inlineHelpText>
    <label>Days in Billing Activation Funnel Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>