force-app/main/default/objects/School_Object__c/fields/Days_to_Activation__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Activation__c</fullName>
    <description>The number of days it took the school from closed won to activate</description>
    <inlineHelpText>The number of days it took the school from closed won to activate</inlineHelpText>
    <label>OLD Days to Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>