force-app/main/default/objects/School_Object__c/fields/Days_to_Add_Parents_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Add_Parents_Threshold__c</fullName>
    <label>Days to Add Parents Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>