force-app/main/default/objects/School_Object__c/fields/Days_to_Adding_Students_Met_SaaS__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Adding_Students_Met_SaaS__c</fullName>
    <label>Days to Adding Students Met - SaaS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>