force-app/main/default/objects/School_Object__c/fields/Days_to_Billing_Setup_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Billing_Setup_Threshold__c</fullName>
    <description>Number of days from Billing Launch Date to the Billing Setup Threshold Met Date.</description>
    <inlineHelpText>Number of days from Billing Launch Date to the Billing Setup Threshold Met Date.</inlineHelpText>
    <label>Days to Billing Setup Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>