force-app/main/default/objects/School_Object__c/fields/Days_to_Finalizing_Verification__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Finalizing_Verification__c</fullName>
    <label>Days to Finalizing Verification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>