force-app/main/default/objects/School_Object__c/fields/Days_to_Logging_Activities_Met__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Logging_Activities_Met__c</fullName>
    <label>Days to Logging Activities Met</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>