force-app/main/default/objects/School_Object__c/fields/Days_to_Parents_Activated_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Parents_Activated_Threshold__c</fullName>
    <description>The number of days it took the school from closed won to hit the parents activated threshold</description>
    <inlineHelpText>The number of days it took the school from closed won to hit the parents activated threshold</inlineHelpText>
    <label>Days to Parents Activated Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>