force-app/main/default/objects/School_Object__c/fields/Days_to_Receiving_Online_Payments_Met__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Receiving_Online_Payments_Met__c</fullName>
    <label>Days to Receiving Online Payments Met</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>