force-app/main/default/objects/School_Object__c/fields/Days_to_SaaS_Activation_New__c.field-meta.xml
<CustomField>
    <fullName>Days_to_SaaS_Activation_New__c</fullName>
    <label>Days to SaaS Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>