force-app/main/default/objects/School_Object__c/fields/Days_to_Setting_Up_Bills_Met__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Setting_Up_Bills_Met__c</fullName>
    <label>Days to Setting Up Bills Met</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>