force-app/main/default/objects/School_Object__c/fields/Days_to_Staff_Logging_In_Met__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Staff_Logging_In_Met__c</fullName>
    <label>Days to Staff Logging In Met</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>