force-app/main/default/objects/School_Object__c/fields/Deposit_Account_Added__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Added__c</fullName>
    <label>Deposit Account Added</label>
    <length>20</length>
    <type>Text</type>
</CustomField>