force-app/main/default/objects/School_Object__c/fields/Documents_Created__c.field-meta.xml
<CustomField>
    <fullName>Documents_Created__c</fullName>
    <description>Number of documents and enrollment forms created all time.</description>
    <inlineHelpText>Number of documents and enrollment forms created all time.</inlineHelpText>
    <label>Documents Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>