force-app/main/default/objects/School_Object__c/fields/Dollars_First_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Dollars_First_Processed_Date__c</fullName>
    <description>The date dollars were first processed on billing platform.</description>
    <inlineHelpText>The date dollars were first processed by the school on the billing platform.</inlineHelpText>
    <label>Dollars First Processed Date</label>
    <type>Date</type>
</CustomField>