force-app/main/default/objects/School_Object__c/fields/Dollars_First_Processed_Online_Date__c.field-meta.xml
<CustomField>
    <fullName>Dollars_First_Processed_Online_Date__c</fullName>
    <description>The date dollars were first processed on online by the school.</description>
    <inlineHelpText>The date dollars were first processed on online by the school.</inlineHelpText>
    <label>Dollars First Processed Online Date</label>
    <type>Date</type>
</CustomField>